; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_swap.c_swap_add_device_dependencies.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_swap.c_swap_add_device_dependencies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@UNIT_BINDS_TO = common dso_local global i32 0, align 4
@UNIT_DEPENDENCY_FILE = common dso_local global i32 0, align 4
@UNIT_AFTER = common dso_local global i32 0, align 4
@SPECIAL_REMOUNT_FS_SERVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @swap_add_device_dependencies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @swap_add_device_dependencies(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = call i32 @assert(%struct.TYPE_5__* %4)
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %39

11:                                               ; preds = %1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %39

17:                                               ; preds = %11
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @is_device_path(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %17
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = call i32 @UNIT(%struct.TYPE_5__* %24)
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @UNIT_BINDS_TO, align 4
  %30 = load i32, i32* @UNIT_DEPENDENCY_FILE, align 4
  %31 = call i32 @unit_add_node_dependency(i32 %25, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %2, align 4
  br label %39

32:                                               ; preds = %17
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %34 = call i32 @UNIT(%struct.TYPE_5__* %33)
  %35 = load i32, i32* @UNIT_AFTER, align 4
  %36 = load i32, i32* @SPECIAL_REMOUNT_FS_SERVICE, align 4
  %37 = load i32, i32* @UNIT_DEPENDENCY_FILE, align 4
  %38 = call i32 @unit_add_dependency_by_name(i32 %34, i32 %35, i32 %36, i32 1, i32 %37)
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %32, %23, %16, %10
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @assert(%struct.TYPE_5__*) #1

declare dso_local i64 @is_device_path(i32) #1

declare dso_local i32 @unit_add_node_dependency(i32, i32, i32, i32) #1

declare dso_local i32 @UNIT(%struct.TYPE_5__*) #1

declare dso_local i32 @unit_add_dependency_by_name(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
